[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyvjoyffb"
version = "1.0"
authors = [
  { name="Yannick Richter" },
]
description = "Python bindings for vJoy with full force feedback support"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ultrawipf/pyvjoy"